<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EWB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_signUp">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Enter Password Again</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="parse_app_id">6w4hqUBySmTvypIDoGOSKO0WQ5hNfJKZUsTcunfH</string>
    <string name="parse_client_id">htBr1Ti6Wyi9rZIdBYo8gwrzLeHsxWHvfea1obVY</string>
    <string name="forum"><![CDATA[Q & A Forum]]></string>
    <string name="calendar">Calendar</string>
    <string name="ewb_url">http://www.ewbbu.com/</string>
    <string name="title_activity_projects">Projects</string>
    <string name="announcements_title">Announcements</string>
    <string name="ewb_admin">EWB Admin</string>
    <string name="ewb_member">EWB Member</string>
    <string name="main_sign_up">Don\'t have an account? Sign Up</string>
    <string name="projects">Projects</string>
    <string name="right_arrow">right arrow</string>
    <string name="left_arrow">left arrow</string>
    <string name="action_edit">Edit</string>
    <string name="title_page_list">Pages</string>
    <string name="title_page_detail">Page Detail</string>
    <string name="back_label">Not an admin? Go back</string>

    <!-- ACTION BAR TITLES -->
    <string name="drawer_twitter">Twitter</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_projects">Projects</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="googlePublicKey">AIzaSyAy-iwqjyFruP9Px31TTRYSVpSpuJKAnts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeline_empty">Swipe down to refresh</string>

    <!-- PROJECT STRINGS -->
    <string name="filter_title">Water Filtration</string>
    <string name="filter_description">Since August 2014, EWB-BU has developed and monitored biosandfiltration
        devices in Naluja, designed to be locally affordable and resourced,  as well as efficient in naturally
        sanitizing contaminated water.</string>
    <string name="filter_image_uri">\@drawable/filtration</string>
    <string name="collection_title">Rainwater Collection</string>
    <string name="collection_description">Given that safe-drinking water sources are few and far apart,
        community members journey several kilometers daily to acquire water. EWB-BU is searching for a more
        efficient means of transporting water, by make portable an increased bulk, by reducing the time of transport,
        and by alleviating the physical stress.</string>
    <string name="collection_image_uri">\@drawable/storage</string>
    <string name="sanitation_title">Sanitation Systems</string>
    <string name="sanitation_description">By promoting healthy hygiene and sanitation practices, EWB-BU hopes to
        prevent the recontamination of potable water and decrease risk of disease related to fecal bacteria. From
        an engineering standpoint, this will be accomplished through more efficient latrine design, tippy-tap hand
        washing stations, and educational workshops.</string>
    <string name="sanitation_image_uri">\@drawable/hygiene</string>
    <string name="solar_title">Solar Pump</string>
    <string name="solar_description">EWB-BU is working to provide improved water accessibility to the
        Nalujan community - even during the dry season - by repairing a solar-powered pump system near the
        clinic and by further investigating drilling a well.</string>
    <string name="solar_image_uri">\@drawable/borehole</string>
    <string name="action_logout">Logout</string>

    <string name="project_section1">Tasks</string>
    <string name="project_section2">Resources</string>
    <string-array name="edit_projects_dialog">
        <item>Biosand Filter</item>
        <item>Water Transportation &amp; Collection</item>
        <item>Sanitation Systems</item>
        <item>Solar Pump</item>
    </string-array>
    <string name="edit_project_dialog_title">Choose a Project to Edit</string>

    <!-- PARSE OBJECT IDS -->
    <string name="filter_id">cUryqF7MGf</string>
    <string name="collection_id">eD2ehQr0YF</string>
    <string name="sanitation_id">e6KauliqDC</string>
    <string name="solar_id">coLup3vAUH</string>

    <string name="refresh_failed">Refresh Failed. Please Try Again.</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_edit_projects">Edit Project Details</string>

    <!-- ERROR MESSAGES -->
    <string name="edit_info_admin_error">You must be an admin to edit app info.</string>


    <string name="title_activity_task">TaskActivity</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_new_task">Create New Task</string>
    <string name="action_delete_task">Delete Task</string>
    <string name="hint_new_task_title">Task Title</string>
    <string name="new_task_description">Description</string>
    <string name="save">Save</string>
    <string name="choose_due_date">Choose Due Date</string>
    <string name="file_name">File Name</string>

    <!-- PDF FILE NAMES -->
    <string name="filter_file">BSFSpring2016.pdf</string>
    <string name="collection_file">WTCSpring2016.pdf</string>
    <string name="sanitation_file">SSSpring2016.pdf</string>
    <string name="solar_file">SPSpring2016.pdf</string>
    <string name="task_title">Task Title</string>
    <string name="task_due_date">Due Date</string>
    <string name="task_description">Task Description</string>
    <string name="delete_task">Delete Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="full_name">Name</string>
    <string name="downloading_file">Downloading File</string>
    <string name="due_date">Due Date</string>
    <string name="project_title">Project Title</string>

</resources>
