<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.patels95.sanam.ewb.ui.HomeOldActivity">
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_new"
          android:title="@string/add_task"
          android:icon="@drawable/ic_note_add_white_48dp"
          app:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_filters"
          android:title="Filters"
          app:showAsAction="ifRoom"
        />
</menu>